--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,16 @@
+html {
+    padding-top: 0;
+    margin-top: 0;
+}
+
 body {
     text-align: center;
+    margin-top: 0;
+    background-image: url(/assets/img/nataniel-susantoputra-377254-unsplash.jpg);
+    background-size: cover;
+    height: 100vh;
+    background-position: right;
+    background-repeat: no-repeat;
 }
 
  .hidden {
@@ -14,6 +25,15 @@ body {
 .visible {
     opacity: 1;
 } 
+
+#content {
+    
+}
+
+/* #splashScreen {
+    height: 100%;
+    background: black;
+} */
 
 /* .icons {
     /* height: 10em; */
@@ -41,6 +61,7 @@ body {
 
 #splash {
     transition: 1s;
+   
 }
 
 #menu1 {
@@ -79,9 +100,9 @@ body {
    color: grey;
 }
 
-.waves-effect {
+/* .waves-effect {
     
-}
+} */
 
 .btn-events {
     /* background: none; */
@@ -96,9 +117,9 @@ body {
     background: orangered;
 } */
 
-#eventsList {
+/* #eventsList {
     
-}
+} */
 
 .eventCard {
     font-size: 1em;
