--- a/assets/css/hover.css
+++ b/assets/css/hover.css
@@ -1796,8 +1796,7 @@
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
-  border-radius: 3em;
-  background: #e1e1e1;
+  background: lightseagreen;
   -webkit-transition-property: color;
   transition-property: color;
   -webkit-transition-duration: 0.3s;
@@ -1811,7 +1810,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: white;
+  background: lightseagreen;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 50%;
